--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-My Own Interactions is an offline only application and doesn't upload any information from the user's device to the internet.
+<h1>My Own Interactions is an offline only application and doesn't upload any information from the user's device to the internet.</h1>
