--- a/404/index.html
+++ b/404/index.html
@@ -34,11 +34,11 @@
     ;e.amplitude=n})(window,document);
   }
   if (typeof window.amplitude === "object") {
-    window.amplitude.getInstance().init("011e40f93ad7112a5d52451e1da80c24", null, {"apiEndpoint":"https://api.eu.amplitude.com","saveEvents":true,"includeUtm":true,"includeReferrer":true,"serverZone":"EU","serverZoneBasedApi":true,"trackingOptions":{"ipAddress":false}});
+    window.amplitude.getInstance().init("011e40f93ad7112a5d52451e1da80c24", null, {"apiEndpoint":"api.eu.amplitude.com","saveEvents":true,"includeUtm":true,"includeReferrer":true,"serverZone":"EU","serverZoneBasedApi":true,"trackingOptions":{"ipAddress":false}});
   }</script><script id="gatsby-script-loader">/*<![CDATA[*/window.pagePath="/404/";/*]]>*/</script><!-- slice-start id="_gatsby-scripts-1" -->
           <script
             id="gatsby-chunk-mapping"
           >
-            window.___chunkMapping="{\"app\":[\"/app-0c8665a373e47c183035.js\"],\"component---src-pages-404-tsx\":[\"/component---src-pages-404-tsx-d545e0156f7b0db6fd30.js\"],\"component---src-pages-index-tsx\":[\"/component---src-pages-index-tsx-82904971dec85426a024.js\"]}";
+            window.___chunkMapping="{\"app\":[\"/app-98c57bdab0d89c7ecbac.js\"],\"component---src-pages-404-tsx\":[\"/component---src-pages-404-tsx-d545e0156f7b0db6fd30.js\"],\"component---src-pages-index-tsx\":[\"/component---src-pages-index-tsx-82904971dec85426a024.js\"]}";
           </script>
-        <script>window.___webpackCompilationHash="683fb8ef89c6f1e821b3";</script><script src="/webpack-runtime-511d8c4f27b633514a03.js" async></script><script src="/framework-6c0face9398a2d7f8b3a.js" async></script><script src="/app-0c8665a373e47c183035.js" async></script><!-- slice-end id="_gatsby-scripts-1" --></body></html>
+        <script>window.___webpackCompilationHash="c6e5193b42768303b9a6";</script><script src="/webpack-runtime-511d8c4f27b633514a03.js" async></script><script src="/framework-6c0face9398a2d7f8b3a.js" async></script><script src="/app-98c57bdab0d89c7ecbac.js" async></script><!-- slice-end id="_gatsby-scripts-1" --></body></html>
