--- a/404/index.html
+++ b/404/index.html
@@ -35,10 +35,10 @@
   }
   if (typeof window.amplitude === "object") {
     window.amplitude.getInstance().init("011e40f93ad7112a5d52451e1da80c24", null, {"apiEndpoint":"api.eu.amplitude.com","saveEvents":true,"includeUtm":true,"includeReferrer":true,"serverZone":"EU","serverZoneBasedApi":true,"trackingOptions":{"ipAddress":false}});
-  }</script><script id="gatsby-script-loader">/*<![CDATA[*/window.pagePath="/404/";/*]]>*/</script><!-- slice-start id="_gatsby-scripts-1" -->
+  }</script><script id="gatsby-script-loader">/*<![CDATA[*/window.pagePath="/404";/*]]>*/</script><!-- slice-start id="_gatsby-scripts-1" -->
           <script
             id="gatsby-chunk-mapping"
           >
-            window.___chunkMapping="{\"app\":[\"/app-98c57bdab0d89c7ecbac.js\"],\"component---src-pages-404-tsx\":[\"/component---src-pages-404-tsx-d545e0156f7b0db6fd30.js\"],\"component---src-pages-index-tsx\":[\"/component---src-pages-index-tsx-e38c053b9244a9169a1e.js\"]}";
+            window.___chunkMapping="{\"app\":[\"/app-a4ddc5373ac1ba3d04b2.js\"],\"component---src-pages-404-tsx\":[\"/component---src-pages-404-tsx-d545e0156f7b0db6fd30.js\"],\"component---src-pages-index-tsx\":[\"/component---src-pages-index-tsx-e38c053b9244a9169a1e.js\"]}";
           </script>
-        <script>window.___webpackCompilationHash="ca42fd4a45d0cf10cbfd";</script><script src="/webpack-runtime-f511d6b480c8c4a1eae9.js" async></script><script src="/framework-6c0face9398a2d7f8b3a.js" async></script><script src="/app-98c57bdab0d89c7ecbac.js" async></script><!-- slice-end id="_gatsby-scripts-1" --></body></html>
+        <script>window.___webpackCompilationHash="640e8e21d186bd4e70c9";</script><script src="/webpack-runtime-f511d6b480c8c4a1eae9.js" async></script><script src="/framework-6c0face9398a2d7f8b3a.js" async></script><script src="/app-a4ddc5373ac1ba3d04b2.js" async></script><!-- slice-end id="_gatsby-scripts-1" --></body></html>
