--- a/404/index.html
+++ b/404/index.html
@@ -39,6 +39,6 @@
           <script
             id="gatsby-chunk-mapping"
           >
-            window.___chunkMapping="{\"app\":[\"/app-5dc7a516a2ec6bd1fa0b.js\"],\"component---src-pages-404-tsx\":[\"/component---src-pages-404-tsx-7f25124a10429899c1e9.js\"],\"component---src-pages-index-tsx\":[\"/component---src-pages-index-tsx-62aec6c896e5e60177a6.js\"]}";
+            window.___chunkMapping="{\"app\":[\"/app-af81eac1299f922a158b.js\"],\"component---src-pages-404-tsx\":[\"/component---src-pages-404-tsx-7f25124a10429899c1e9.js\"],\"component---src-pages-index-tsx\":[\"/component---src-pages-index-tsx-ad2dfeb9a43af02e92ef.js\"],\"component---src-pages-privacy-mdx\":[\"/component---src-pages-privacy-mdx-a056819a4e730d670a05.js\"]}";
           </script>
-        <script>window.___webpackCompilationHash="88c4cdde2d20f46bfade";</script><script src="/webpack-runtime-34fe5e88ec346fdbc8ff.js" async></script><script src="/framework-999591b7d11ce2fc5776.js" async></script><script src="/app-5dc7a516a2ec6bd1fa0b.js" async></script><!-- slice-end id="_gatsby-scripts-1" --></body></html>
+        <script>window.___webpackCompilationHash="981ce376dbfd14a18773";</script><script src="/webpack-runtime-929747a437c4138ee022.js" async></script><script src="/framework-999591b7d11ce2fc5776.js" async></script><script src="/app-af81eac1299f922a158b.js" async></script><!-- slice-end id="_gatsby-scripts-1" --></body></html>
